# griptape-nodes-library-kling

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  version-bump-minor.yml  version-bump-patch.yml  version-publish.yml
kling/: __init__.py  griptape_nodes_library.json  image_to_video.py  kling_v3_multi_shot.py  lip_sync.py  motion_control.py  text_to_video.py  video_extension.py
kling/widgets/: MultiShotEditor.js
