[project]
name = "kling_nodes"
version = "0.1.0"
description = "Griptape Node Library for Kling AI Video Generation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kling"]

[dependency-groups]
dev = ["pyright>=1.1.396", "pytest-asyncio>=0.21.0", "ruff>=0.8.0", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
  "E722", # do not use bare except
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*", "templates"]
pythonVersion = "3.13"
reportIncompatibleMethodOverride = false
reportMissingImports = false
reportMissingModuleSource = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportGeneralTypeIssues = false
reportPossiblyUnboundVariable = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportOperatorIssue = false
reportReturnType = false
reportIndexIssue = false
